# template-explorer

./: .gitignore  README.md  design.md  pyproject.toml
backend/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: datasets.ts  llm.ts  templates.ts
frontend/src/components/: DatasetInspector.tsx  DatasetView.tsx  DatasourceBinder.tsx  PromptPreview.tsx  ResultViewer.tsx  RunnerPanel.tsx  TemplateEditor.tsx  TemplateView.tsx
frontend/src/stores/: appStore.ts
