[project]
name = "template-explorer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "background-tasks>=0.0.1",
    "fastapi>=0.116.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "llama-index>=0.12.48",
    "llama-index-llms-anthropic>=0.7.6",
    "llama-index-llms-google-genai>=0.2.4",
    "llama-index-llms-openai>=0.4.7",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
